[package]
name = "break_infinity_extended"
version = "0.4.0-dev.1"
edition = "2021"

# for now we keep it as a git-only fork
publish = false

license = "MPL-2.0"
description = "A library for larger numbers up to 1e1.79e308 (1 ^ (1.79 ^ 308)) in Rust for Incremental Games"
documentation = "https://docs.rs/break_infinity_extended"
homepage = "https://github.com/asaaki/break-infinity.rs"
repository = "https://github.com/asaaki/break-infinity.rs"

keywords = [
    "big-number",
    "decimal",
    "incremental",
    "large-number",
    "math",
]
categories = [
    "game-development",
    "mathematics",
]

exclude = [
    ".gitignore",
]

[features]
default = ["serde"]
serde = ["serde/derive"]
jokes = []

[dependencies]
bie-proc-macros = { path = "bie-proc-macros" }
serde = { version = "1.0.152", default-features = false, optional = true }
